--- a/ejrcicio2.index.html
+++ b/ejrcicio2.index.html
@@ -7,5 +7,59 @@
   </head>
   <body>
     <h1>Programacion Web Full Stack</h1>
+    <h2>Modulos de cursada</h2>
+    <div>
+      <ol>
+        <li>Diseño Web:</li>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>Git y Github</li>
+        </ul>
+        <li>Programacion Web:</li>
+        <ul>
+          <li>Javascript</li>
+        </ul>
+        <li>Programacion web avanzada:</li>
+        <ul>
+          <li>ReactJs</li>
+        </ul>
+        <li>Backend</li>
+        <ul>
+          <li>NodeJs</li>
+          <li>Bases de datos</li>
+        </ul>
+      </ol>
+    </div>
+    <h2>Modalidad de cursada:</h2>
+    <div>
+      <ul>
+        <li><b>Contenidos en vivo:</b></li>
+        <br />
+        <ul>
+          <li>Clases online en zoom</li>
+          <li>Meetups</li>
+          <li>Clases de Repaso</li>
+        </ul>
+      </ul>
+    </div>
+    <div>
+      <ul>
+        <li><b>Contenido Teorico-practico</b></li>
+        <br />
+        <ul>
+          <li>Teorico:</li>
+          <ul>
+            <li>Documentaciones</li>
+            <li>Articulos de interes</li>
+          </ul>
+          <li>Practico:</li>
+          <ul>
+            <li>Desafios</li>
+            <li>Entregas</li>
+          </ul>
+        </ul>
+      </ul>
+    </div>
   </body>
 </html>
