--- a/ejrcicio2.index.html
+++ b/ejrcicio2.index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Programacion web full stack</title>
+    <title>Ejercicio 2</title>
   </head>
   <body>
     <h1>Programacion Web Full Stack</h1>
