agregue un footer

--- a/ejercicio3.index.html
+++ b/ejercicio3.index.html
@@ -6,50 +6,52 @@
     <title>Ejercicio 3</title>
   </head>
   <body>
-    <div>
-      <h1>Formularios de registro</h1>
-      <form>
-        <div>
-          <label for="name">Nombre:</label>
-          <input type="text" id="name" placeholder="Joaquin" />
-        </div>
-        <br />
-        <div>
-          <label for="surname">Apellido:</label>
-          <input type="text" id="surname" placeholder="Alonso" />
-        </div>
-        <br />
-        <div>
-          Modalidad de Cursada:
-          <input type="radio" id="On-Demand" name="Modalidad" />
-          <label for="On-Demand">On-Demand</label>
-          <input type="radio" name="En vivo" id="En vivo" />
-          <label for="En vivo">En vivo</label>
-        </div>
-        <br />
-        <div>
-          <label for="name">Correo:</label>
-          <input type="email" id="email" placeholder="Joaquin" />
-        </div>
-        <br />
-        <div>
-          <input type="checkbox" id="ch" required />
-          <label for="checkbox"
-            >Deseo recibir informacion sobre nuevo posteos en la plataforma de
-            Nucba.</label
-          >
-        </div>
-        <br />
-        <div>
-          <input type="checkbox" id="ch" required />
-          <label for="checkbox"
-            >Declaro que lei los terminos y condiciones y estoy listo para
-            convertirme en Desarrollador web Full Stack.</label
-          >
-        </div>
-        <br />
-        <input type="submit" value="Enviar" />
-      </form>
-    </div>
+    <footer>
+      <div>
+        <h1>Formularios de registro</h1>
+        <form>
+          <div>
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" placeholder="Joaquin" />
+          </div>
+          <br />
+          <div>
+            <label for="surname">Apellido:</label>
+            <input type="text" id="surname" placeholder="Alonso" />
+          </div>
+          <br />
+          <div>
+            Modalidad de Cursada:
+            <input type="radio" id="On-Demand" name="Modalidad" />
+            <label for="On-Demand">On-Demand</label>
+            <input type="radio" name="En vivo" id="En vivo" />
+            <label for="En vivo">En vivo</label>
+          </div>
+          <br />
+          <div>
+            <label for="name">Correo:</label>
+            <input type="email" id="email" placeholder="Joaquin" />
+          </div>
+          <br />
+          <div>
+            <input type="checkbox" id="ch" required />
+            <label for="checkbox"
+              >Deseo recibir informacion sobre nuevo posteos en la plataforma de
+              Nucba.</label
+            >
+          </div>
+          <br />
+          <div>
+            <input type="checkbox" id="ch" required />
+            <label for="checkbox"
+              >Declaro que lei los terminos y condiciones y estoy listo para
+              convertirme en Desarrollador web Full Stack.</label
+            >
+          </div>
+          <br />
+          <input type="submit" value="Enviar" />
+        </form>
+      </div>
+    </footer>
   </body>
 </html>
