--- a/ejercicio3.index.html
+++ b/ejercicio3.index.html
@@ -51,5 +51,6 @@
         <input type="submit" value="Enviar" />
       </form>
     </div>
+    <a href="./ejercicio1.index.html">Ir a ejercicio1</a>
   </body>
 </html>
