--- a/ejercicio1.index.html
+++ b/ejercicio1.index.html
@@ -31,5 +31,6 @@
         <li>2022 <b>Copa Mundial de la FIFA-Qatar 2022</b></li>
       </ul>
     </div>
+    <a href="./ejrcicio2.index.html">Ir a ejercicio2</a>
   </body>
 </html>
