--- a/index2.html
+++ b/index2.html
@@ -61,6 +61,6 @@
         </ul>
       </ul>
     </div>
-    <a href="./ejercicio3.index.html">Ir a ejercicio3</a>
+    <a href="./index3.html">Ir a ejercicio3</a>
   </body>
 </html>
