--- a/index3.html
+++ b/index3.html
@@ -51,6 +51,6 @@
         <input type="submit" value="Enviar" />
       </form>
     </div>
-    <a href="./ejercicio1.index.html">Ir a ejercicio1</a>
+    <a href="./index.html">Ir a ejercicio1</a>
   </body>
 </html>
